fixed code editor panel resizing on Safari

--- a/style/dock.css
+++ b/style/dock.css
@@ -54,6 +54,7 @@
 	font-size: 11px;
 	font-weight: bold;
 	cursor: pointer;
+	overflow: hidden;
 }
 
 .panel-tab:hover {
